# Proyecto_2_SO

./: CMakeLists.txt  README.md  exe  historial.txt  main.c  prueba.txt  run  script  script.c
Archivos/: Archivo.h  MapaBits.txt  MejorAjuste.txt  ParticionesFijas.txt  PeorAjuste.txt  PrimerAjuste.txt  SiguienteAjuste.txt  Socios.txt  prueba.txt  prueba2.txt  prueba3.txt  prueba4.txt  prueba5.txt  prueba6.txt  prueba7.txt
Interfaz/: VistaRendimiento.h
ListaLigadas/: ListasLigadas.h
Listas/: Lista.h  ListaDirecionesM.h  Lista_E_S.h  Nodo.h  NodoDirecionesM.h  Nodo_E_S.h
Logica/: Logica.h
MatrizMemoria/: Matriz.h
Socios/: Socios.h
Sonidos/: Sonido.h
